fixed scrollbar and fixed social btns

--- a/source/styles/common/footer.styl
+++ b/source/styles/common/footer.styl
@@ -24,6 +24,7 @@
     }
     .form__heading {
       max-width: none;
+      padding: 0;
       width: 100%;
     }
     .form-group {
